# best-bank-as

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  db_dev.env  db_prod.env  db_test.env  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  linters.yml
best_bank_as/: admin.py  apps.py  constants.py  decorators.py  enums.py  models.py  tests.py  urls.py  views.py  views_mo.py
best_bank_as/db_models/: account.py  account_type.py  bank.py  customer.py  ledger.py  loan.py  loan_application.py  transaction.py
best_bank_as/forms/: TransferForm.py  customer_form.py  external_transfer_form.py  loan_application_form.py  request_new_account_form.py
best_bank_as/management/commands/: demodata.py  provision.py
best_bank_as/middleware/: middleware.py
best_bank_as/migrations/: 0001_initial.py  0002_alter_ledger_status.py  0002_customer_status.py  0002_customerlevel_remove_customer_customer_level_name_and_more.py  0002_remove_account_account_type_account_type.py  0003_account_account_status.py  0003_remove_customer_customer_level.py  0004_alter_account_account_status_alter_customer_status.py  0004_customer_customer_level.py  0004_loan_loanapplication_alter_account_account_status_and_more.py  0004_loanapplication_alter_account_account_status_and_more.py  0005_alter_loanapplication_status.py  0005_bank_alter_account_type.py  0005_remove_ledger_account_number1_and_more.py  0006_delete_accounttype_remove_account_type_and_more.py  0006_ledger_registration_number.py  0006_rename_transactiontable_transaction_and_more.py  0007_alter_ledger_amount_alter_loan_end_date_and_more.py  0007_ledger_status.py  0007_transaction_created_at.py  0008_alter_ledger_registration_number.py  0008_remove_account_account_number_alter_loan_end_date.py  0008_rename_account_id_account_id_and_more.py  0009_remove_loan_end_date.py  0010_alter_account_customer_and_more.py  0011_alter_ledger_account_alter_ledger_transaction_and_more.py  0012_merge_20240122_1850.py  0013_alter_account_account_status.py  0014_merge_20240122_2112.py
best_bank_as/models/: account.py  account_type.py  bank.py  customer.py  customer_application.py  customer_level.py  ledger.py  loan.py  loan_application.py  transaction.py  transaction_table.py
best_bank_as/models/core/: base_model.py
best_bank_as/templates/best_bank_as/: 403_forbidden.html  base.html  index.html  profile.html  search_customer.html  (+1 more)
best_bank_as/views_classes/: customer_view.py
nginx/prod/: nginx.conf
project/: models.py  settings.py  urls.py
test/: test.py
(+39 files in other folders)
